# onrobot-rg6

./: .gitignore  README.md
src/onrobot_rg6_visualization/: CMakeLists.txt  package.xml
src/onrobot_rg6_visualization/meshes/: husky_sensor_arch.stl  husky_top_assembly.dae
src/onrobot_rg6_visualization/urdf/: onrobot_rg6.xacro  onrobot_rg6_model_macro.xacro
src/rg6_control/: CMakeLists.txt  package.xml
src/rg6_control/config/: io_and_status_controller.yaml  rg6_params.yaml
src/rg6_control/launch/: joint_states.launch.py  rg6_bringup.launch.py  rg6_control.launch.py
src/rg6_control/scripts/: rg6_moveit_patch
src/rg6_control/src/: joint_state_aggregator.cpp  joint_state_relay.cpp  rg6_control.cpp  rg6_control_sim.cpp  rg6_joint_state_broadcaster.cpp  rg6_joint_state_broadcaster_sim.cpp
src/rg6_description/: CMakeLists.txt  README.md  package.xml
src/rg6_description/launch/: controller.launch  display.launch  gazebo.launch
src/rg6_description/meshes/: husky_sensor_arch.gltf
src/rg6_description/urdf/: clearpath_extras.urdf.xacro  materials.xacro  onrobot_rg6.xacro  onrobot_rg6_model.xacro  onrobot_rg6_model_macro.xacro  rg6_gripper.gazebo  rg6_gripper.trans  rg6_gripper.xacro
src/rg6_msgs/: CMakeLists.txt  package.xml
src/rg6_msgs/msg/: GripperState.msg
src/rg6_msgs/srv/: Grip.srv
