<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_rg6_visualization</name>
  <version>0.0.1</version>
  <description>OnRobot RG6 visual/collision model (URDF/xacro + meshes) for RViz/Foxglove.</description>
  <maintainer email="hannes.voss@haw-hamburg.de">Hannes Voss</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
