<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rg6_control</name>
  <version>0.1.0</version>
  <description>Treiber fuer den OnRobot RG6 am UR-Tool-Anschluss (Level-I/O,
    Kraft-Preset, Tool-Power, Ziel-Weite/-Kraft via URScript-Injektion,
    GripperCommand-Action fuer MoveIt) + joint_state-Hilfsnodes.</description>
  <maintainer email="hannes.voss@haw-hamburg.de">Hannes Voss</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>rg6_msgs</depend>

  <!-- rg6_moveit_patch (PyYAML fuer moveit.yaml-Patch) -->
  <exec_depend>python3-yaml</exec_depend>
  <!-- rg6_bringup.launch.py: optionaler urscript_interface-Node -->
  <exec_depend>ur_robot_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
