<?xml version="1.0"?>
<package format="2">
  <name>rg6_description</name>
  <version>0.0.0</version>
  <description>The rg6_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="neuzhouzhengxue@gmail.com">zhouzx</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
